--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["webbrowser", "sys"]
-build-backend = "simple_webbrowser.build"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "simple_webbrowser"
